--- a/src/css/index.css
+++ b/src/css/index.css
@@ -27,6 +27,7 @@
 	/*background: yellow;*/
 	margin-top: 55px;
 	padding: 0.5%;
+	position: static;
 }
 
 .T-r {
@@ -73,6 +74,7 @@
 	font-size: 30px;
 	font-weight: bold;
 	padding-top: 2%;
+	padding-left: 5%;
 }
 
 .T-l {
@@ -106,6 +108,7 @@
 		.lb-r .input {
 			border: 0;
 			height: 90%;
+			position: static;
 		}
 
 		.lb-r select {
@@ -194,3 +197,84 @@
 		padding: 0.5% 2%;
 		float: left;
 	}
+
+/* modal */
+
+.modal .modal-content {
+	width: 80%;
+	height: 100%;
+	background: #fff;
+	border-radius: 9px;
+}
+
+	.modal .modal-card-head {
+		background: #1a8aba;
+	}
+		.modal .modal-card-head .modal-card-title {
+			color: #fff;
+			font-weight: bold;
+		}
+
+		.modal .S-l {
+			width: 15%;
+			text-align: right;
+			padding-right: 3%;
+			float: left;
+			/*border: 1px solid black;*/
+			font-size: 20px;
+			padding: 1%;
+		}
+
+		.modal .S-c {
+			width: 55%;
+			text-align: left;
+			padding-left: 3%;
+			float: left;
+			/*border: 1px solid black;*/
+			padding: 0.2% 0;
+		}
+
+		.modal .S-r {
+			width: 30%;
+			text-align: left;
+			float: left;
+			/*border: 1px solid black;*/
+			padding: 0.2% 0;
+			margin-bottom: 0.5%;
+		}
+
+			.modal .S-r .button {
+				width: 70%;
+				margin: 0 5%;
+			}
+
+		.mo-list {
+			width: 100%;
+			border: 1px solid #ced9dd;
+			height: 150px;
+			clear: both;
+		}
+
+			.mo-list-img {
+				width: 150px;
+				height: 150px;
+				overflow: hidden;
+				padding: 1%;
+				float: left;
+			}
+				.mo-list-img img {
+					width: 100%;
+				}
+
+			.mo-list-detail {
+				padding: 2%;
+				float: left;
+				font-size: 14px;
+				word-wrap: break-word;
+				color: gray;
+			}
+
+			.mo-list-title {
+				font-weight: bold;
+				color: #000;
+			}
