--- a/src/css/index.css
+++ b/src/css/index.css
@@ -167,6 +167,15 @@
 			background: #cecece;
 		}
 
+		.lb-r .date {
+			height: 35px;
+			margin-top: 0.6%;
+			width: 80%;
+			text-align: right;
+			padding-right: 10%;
+			cursor: pointer;
+		}
+
 	.QT-body {
 		width: 100%;
 		height: 200px;
