--- a/src/css/table.css
+++ b/src/css/table.css
@@ -38,6 +38,7 @@ table.tableSection tr {
 
 table.tableSection td {    
     padding: 0.5% 2%;
+    cursor: pointer;
     /*border: 1px solid black;*/
 }
 
