--- a/src/css/index.css
+++ b/src/css/index.css
@@ -108,9 +108,11 @@ input[type="text"]:disabled {
 	height: 40%;
 	text-align: left;
 	font-size: 30px;
+	line-height: 40px;
 	font-weight: bold;
 	padding-top: 2%;
 	padding-left: 5%;
+	margin-bottom: 5%;
 }
 
 .T-l {
