--- a/src/css/ipad.css
+++ b/src/css/ipad.css
@@ -91,6 +91,11 @@
   		padding-top: 3%;
   		padding-left: 5%;
   	}
+
+    #fab {
+      width: 500px;
+      height: 500px;
+    }
 }
 
 @media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:portrait) {
