--- a/src/css/table.css
+++ b/src/css/table.css
@@ -35,6 +35,10 @@ table.tableSection tr {
     display: table;
     table-layout: fixed;
 }
+    table.tableSection tr .tractive {
+        background: black;
+        color: #fff;
+    }
 
 table.tableSection td {    
     padding: 0.5% 2%;
@@ -48,6 +52,7 @@ table.tableSection td {
         padding-right: 2%;
         text-align: right;
         border: 0;
+        margin-top: 0.5%;
     } 
 
     table.tableSection td select {
@@ -57,4 +62,17 @@ table.tableSection td {
         border:0;
         text-align: right;
         border: 0;
-    }  
+        margin-top: 0.5%;
+    }
+
+.table {
+    width: 100%;
+}
+    .table th {
+        background: #f5f5f0;
+        text-align: center;
+    }
+
+    .table td {
+        text-align: right;
+    }
