--- a/src/css/index.css
+++ b/src/css/index.css
@@ -447,6 +447,10 @@ input[type="text"]:disabled {
 		color: #30c103;
 	}
 
+	.transfer_full {
+		color: #afafaf;
+	}
+
 	#dataList {
 		width:100%; 
 		max-height: 510px; 
